# anki-flashcard-mcp

./: README.md  dockerfile  pyproject.toml
src/anki_flashcard_mcp/: server.py
